* Fixed: horizontal scroll bar appears when there are multiple fragments  (due to border of fragment separator) * Fixed: analyzer used for autocompletion treated subsequent tokens on different line numbers as single token * Added removal of line number tokens again
svn path=/reposearch/; revision=104

--- a/stylesheets/common_.css
+++ b/stylesheets/common_.css
@@ -153,7 +153,8 @@ input.button {
 }
 .nolinenumbera {
     background: -moz-linear-gradient(center top , #EBF4FA, WhiteSmoke) repeat scroll 0 0 #EBF4FA;
-    border: 1px solid #BBD9EE;
+    border-top: 1px solid #BBD9EE;
+    border-bottom: 1px solid #BBD9EE;
     color: Black;
     float: left;
     left: 0;
@@ -175,7 +176,8 @@ input.button {
 }
 .nolinenumberb {
     background: -moz-linear-gradient(center top , WhiteSmoke, #EBF4FA) repeat scroll 0 0 WhiteSmoke;
-    border: 1px solid #BBD9EE;
+    border-top: 1px solid #BBD9EE;
+    border-bottom: 1px solid #BBD9EE;
     color: Black;
     float: left;
     left: 0;
